Update README, analytics id

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Cardano
+title: 卡尔达诺
 email: cardano@iohk.io
-description: SL Documentation
+description: 清算层文档
 baseurl: ""
-url: "https://cardanodocs.com"
+url: "https://cncardanodocs.com"
 include: ["_pages","_docs"]
 permalink: /:title
 
